<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <View
            android:id="@+id/emptyCircleView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent=".7"
            app:layout_constraintHorizontal_bias=".85"
            app:layout_constraintVertical_bias=".25"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_circle"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent=".07"
            app:layout_constraintBottom_toTopOf="@+id/emptyTitleText"
            app:layout_constraintStart_toStartOf="@+id/emptyTitleText"
            app:layout_constraintEnd_toEndOf="@+id/emptyTitleText"
            app:layout_constraintHorizontal_bias="0.2"/>

        <TextView
            android:id="@+id/emptyTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/statistics_empty_title"
            android:textSize="28sp"
            android:textColor="?colorPrimary"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintVertical_bias=".2"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/emptyDescriptionText"
            app:layout_constraintStart_toEndOf="@+id/emptyCircleView"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/emptyDescriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/statistics_empty_description"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4dp"
            app:layout_constraintTop_toBottomOf="@+id/emptyTitleText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/emptyCircleView"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/dayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/selector_statistics_label_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/statistics_day_label"
            android:textColor="@drawable/selector_statistics_label_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/weekLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/weekLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/selector_statistics_label_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/statistics_week_label"
            android:textColor="@drawable/selector_statistics_label_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/monthLabel"
            app:layout_constraintStart_toEndOf="@+id/dayLabel"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/monthLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/selector_statistics_label_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/statistics_month_label"
            android:textColor="@drawable/selector_statistics_label_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/yearLabel"
            app:layout_constraintStart_toEndOf="@+id/weekLabel"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/selector_statistics_label_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/statistics_year_label"
            android:textColor="@drawable/selector_statistics_label_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/monthLabel"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayLabel"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/statisticsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fadingEdgeLength="16dp"
            android:requiresFadingEdge="vertical"
            android:fadingEdge="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/endGuideline"
            app:layout_constraintStart_toStartOf="@+id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/pieChart"
            tools:listitem="@layout/item_statistics_task"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>